fixed bug where beer cards overlapped each other

--- a/frontend/public/styles/BeerCard.css
+++ b/frontend/public/styles/BeerCard.css
@@ -4,10 +4,7 @@
     background-color: transparent;
     width: 300px;
     height: 500px;
-    perspective: 1000px;
     display: flex;
-  
-  
 }
 
 .flip-card-inner {
@@ -26,10 +23,7 @@
 
 .flip-card-front,
 .flip-card-back {
-   
-   
     border-radius: 20px;
-    position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
@@ -37,124 +31,114 @@
 }
 
 .flip-card-front {
-   
+    position: absolute;
     background-color: #000;
     color: black;
 }
 
 .flip-card-back {
+    position: relative;
     background-color: #F4C70C;
     color: white;
     transform: rotateY(180deg);
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 .flip-card-back h2 {
-    margin-top: 30px;
     text-decoration: underline;
-;
-     color: black;
+    color: black;
     line-height: 10px;
-  
 }
+
 .flip-card-back strong h2 {
     color: black;
     line-height: 0px;
     text-decoration: none;
 }
- 
-    
+
 .flip-card-back p {
-        color: black;
-    
-        
-    }
+    color: black;
+}
 
-
-
-.flip-card-back  a {
- 
- color: #F4C70C;
+.flip-card-back a {
+    color: #F4C70C;
     text-decoration: none;
-} 
+}
 
 .imageElement {
-        object-fit: contain;
+    object-fit: contain;
 }
 
 .active {
     display: block;
-   
 }
 
 .Name {
     display: inline;
 }
-.pla  {
-  
-    margin-left: 20px;
-    margin-top: 5px;
+
+.pla {
     width: 250px;
     height: 250px;
     padding: 5px;
     background-color: black;
     border-radius: 10px;
 }
-.pla p{
-    color:#F4C70C;
+
+.pla a {
+    z-index: 100;
 }
+
+.pla p {
+    color: #F4C70C;
+}
+
 .flip-card-back strong {
     line-height: 10px;
-    margin-top: 70px;
 }
-.btn {
-  
 
-
-}
 .style-col button {
     margin-left: 20px;
     margin-bottom: 20px;
     line-height: 10px;
 }
-.style-box button{
+
+.style-box button {
     margin-left: 20px;
     margin-bottom: 20px;
     line-height: 10px;
 }
 
-}
 #buttons {
     display: flex;
-   
-  
-  
-    
-}
-.btn {
-   background:none;
-   font-size: 18px;
-   border: none;
-   color: #F4C70C;
 }
 
-.style-box  h2{
-   line-height: 27px;
-   width:370px;
+.btn {
+    background: none;
+    font-size: 18px;
+    border: none;
+    color: #F4C70C;
+}
+
+.style-box h2 {
+    line-height: 27px;
+    width: 370px;
     text-align: left;
     margin-left: 20px;
-    border-bottom: 2px solid #F4C70C ;
-    
+    border-bottom: 2px solid #F4C70C;
 }
-.style-col  h2{
-   line-height: 27px;
-   width:370px;
+
+.style-col h2 {
+    line-height: 27px;
+    width: 370px;
     text-align: left;
     margin-left: 20px;
-    border-bottom: 2px solid #F4C70C ;
-  
-    
+    border-bottom: 2px solid #F4C70C;
 }
+
 .style-box {
-   margin-top: 80px;
-   
+    margin-top: 80px;
 }
